<resources>
    <string name="app_name">Music Station</string>
    <string name="gmail">Gmail</string>
    <string name="facebook">Facebook</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string-array name="estilos_array">
        <item>Todos os estilos</item>
        <item>Rock</item>
        <item>Sertanejo</item>
        <item>Pagode</item>
        <item>Eletrônica</item>
        <item>Funk</item>
        <item>MPB</item>
    </string-array>
</resources>